tweet layout mostly completed, need to add hover state

--- a/public/index.html
+++ b/public/index.html
@@ -55,13 +55,15 @@
           <section class="tweet">
             <article>
               <header>
-                This is the header!
+                <h2>Evan Kerr
+                <img src="images/bird.png">
+                <span class="creator">@user</span>
+                </h2>
               </header>
               <textarea name="text" readonly></textarea>
               <footer>
-                  @user
+                X days ago
               </footer>
-              <span class="created">X days ago</span>
             </article>
           </section>
     </main>
