added hover state icons and opacity

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 
     <!-- Char counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 
   </head>
@@ -62,7 +65,13 @@
               </header>
               <textarea name="text" readonly></textarea>
               <footer>
-                X days ago
+                <span class="date created">X days ago
+                  <span class="icons">
+                   <i class="fab fa-font-awesome-flag"></i>
+                   <i class="fas fa-retweet"></i>
+                   <i class="fas fa-heart"></i>
+                  </span>
+                </span>
               </footer>
             </article>
           </section>
