createTweetElement function working

--- a/public/index.html
+++ b/public/index.html
@@ -54,16 +54,16 @@
               <input type="submit" value="Tweet">
               <span class="counter">140</span>
             </form>
-          </section>
+        </section>
           <section class="tweet">
-            <article>
+            <article class="full tweet">
               <header>
                 <h2>Evan Kerr
                 <img src="images/bird.png">
                 <span class="creator">@user</span>
                 </h2>
               </header>
-              <textarea name="text" readonly></textarea>
+            <p>This is a long sentenceIt has a break in iljqwhfiuqubfbqbef;bquuqbfuqeb;fbii;qif;biqbfiubiuqbfu  jkqnfljnqlelfenqlnfbqefobhq;oefbqobfo;bqfoq;befouboqbfuoqe;wbdkhw dih diuhw dhi dh  it back there</p>
               <footer>
                 <span class="date created">X days ago
                   <span class="icons">
