fixed some issues with CSS, still one left to solve

--- a/public/index.html
+++ b/public/index.html
@@ -63,15 +63,14 @@
                 <span class="creator">@user</span>
                 </h2>
               </header>
-            <p>This is a long sentenceIt has a break in iljqwhfiuqubfbqbef;bquuqbfuqeb;fbii;qif;biqbfiubiuqbfu  jkqnfljnqlelfenqlnfbqefobhq;oefbqobfo;bqfoq;befouboqbfuoqe;wbdkhw dih diuhw dhi dh  it back there</p>
+            <p>This is a long sentenceIt has a break in iljqwhfiuqubfbqbef;bquuqbfuqeb;fbii;q qbfiub iuqbfu  jkqnfljnqlelfenqlnfbqefobhq;oefbqobfo;bqfoq;befouboqbfuoqe;wbdkhw dih diuhw dhi dh  it back there</p>
               <footer>
-                <span class="date created">X days ago
+                <span class="date created">X days ago</span>
                   <span class="icons">
                    <i class="fab fa-font-awesome-flag"></i>
                    <i class="fas fa-retweet"></i>
                    <i class="fas fa-heart"></i>
                   </span>
-                </span>
               </footer>
             </article>
           </section>
