compose button working

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button name="compose">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -63,7 +64,7 @@
                 <span class="creator">@user</span>
                 </h2>
               </header>
-            <p>This is a long sentenceIt has a break in iljqwhfiuqubfbqbef;bquuqbfuqeb;fbii;q qbfiub iuqbfu  jkqnfljnqlelfenqlnfbqefobhq;oefbqobfo;bqfoq;befouboqbfuoqe;wbdkhw dih diuhw dhi dh  it back there</p>
+            <p>This is a long sentenceIt h</p>
               <footer>
                 <span class="date created">X days ago</span>
                   <span class="icons">
