--- a/public/index.html
+++ b/public/index.html
@@ -1,80 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Information -->
-    <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    
-    <!-- Roboto Condensed font -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+<head>
+  <!-- Meta Information -->
+  <title>Tweeter - Home Page</title>
 
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <!-- External CSS -->
+  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
-    <!-- NAV CSS-->
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <!-- Roboto Condensed font -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
-    <!-- New-tweet CSS-->
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
 
-    <!-- New-tweet CSS-->
-    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+  <!-- App CSS -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+  <!-- NAV CSS-->
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- New-tweet CSS-->
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
-    <!-- Char counter JS -->
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-    
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <!-- tweets CSS-->
+  <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
+  <!-- External JS -->
+  <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+
+  <!-- App JS -->
+  <script type="text/javascript" src="/scripts/app.js"></script>
+
+  <!-- Char counter JS -->
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
 
-  </head>
+</head>
 
-  <body>
-  
-    <!-- Top nav bar (fixed) -->
-    <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png">
-      <span class="header">Tweeter</span>
-      <button name="compose" <i class="far fa-edit"></i>Compose</button>
-    </nav>
+<body>
 
-    <!-- Page-specific (main) content here -->
-    <main class="container">
-        <section class="new-tweet">
-            <h2>Compose Tweet</h2>
-            <form action="/tweets/" method="POST">
-              <textarea name="text" placeholder="What are you humming about?"></textarea>
-              <input type="submit" value="Tweet">
-              <span class="counter">140</span>
-            </form>
-        </section>
-          <section class="tweet">
-            <article class="full tweet">
-              <header>
-                <h2>Evan Kerr
-                <img src="images/bird.png">
-                <span class="creator">@user</span>
-                </h2>
-              </header>
-            <p>This is a long sentenceIt h</p>
-              <footer>
-                <span class="date created">X days ago</span>
-                  <span class="icons">
-                   <i class="fab fa-font-awesome-flag"></i>
-                   <i class="fas fa-retweet"></i>
-                   <i class="fas fa-heart"></i>
-                  </span>
-              </footer>
-            </article>
-          </section>
-    </main>
-  </body>
+  <!-- Top nav bar (fixed) -->
+  <nav id="nav-bar">
+    <img class="logo" src="/images/bird.png">
+    <span class="header">Tweeter</span>
+    <button name="compose" <i class="far fa-edit">
+      </i>Compose</button>
+  </nav>
+
+  <!-- Page-specific (main) content here -->
+  <main class="container">
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form action="/tweets/" method="POST">
+        <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <input type="submit" value="Tweet">
+        <span class="counter">140</span>
+      </form>
+    </section>
+    <section class="tweet">
+      <article class="full tweet">
+        <header>
+          <h2>Evan Kerr
+            <img>
+            <span class="creator">@user</span>
+          </h2>
+        </header>
+        <p>This is a long sentenceIt h</p>
+        <footer>
+          <span class="date created">X days ago</span>
+          <span class="icons">
+            <i class="fab fa-font-awesome-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </span>
+        </footer>
+      </article>
+    </section>
+  </main>
+</body>
+
 </html>
