--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
   <!-- External JS -->
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
+  <!--Humanize Duration-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/humanize-duration/3.15.0/humanize-duration.js"></script>
+
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/app.js"></script>
 
