--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <section class="tweet">
       <article class="full tweet">
         <header>
-          <h2>Evan Kerr
+          <h2>Name
             <img>
             <span class="creator">@user</span>
           </h2>
